--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -441,8 +441,10 @@ if (UNIX)
   endif (NOT VMKERNEL)
   get_relative_location(malloc malloc_path)
   newtest_ex(execve execve.c "${malloc_path}" "" "" OFF "" OFF)
-  newtest(pthreads pthreads.c)
-  target_link_libraries(pthreads pthread)
+  # i#1264: the name "pthreads" on an executable breaks 2.8.11 find_package(Threads)
+  # so we use "pthread_test".  The compare files are still "pthreads.*".
+  newtest_ex(pthread_test pthreads.c "" "" "" OFF "pthreads" OFF)
+  target_link_libraries(pthread_test pthread)
   tobuild_lib(loaderlib loader.lib.c "" "")
   get_relative_location(loaderlib loaderlib_path)
   newtest_ex(loader loader.c "${loaderlib_path}" "" "" OFF "" OFF)
@@ -586,7 +588,7 @@ if (TOOL_DR_MEMORY)
   # won't wait for a message showing that results are ready
   # FIXME i#715: perturb is flaky on the bots.
   if (UNIX)
-    newtest_nobuild(perturb_FLAKY pthreads "" "-perturb_only" "" OFF "")
+    newtest_nobuild(perturb_FLAKY pthread_test "" "-perturb_only" "" OFF "")
   else (UNIX)
     newtest_nobuild(perturb_FLAKY winthreads  "" "-perturb_only" "" OFF "")
   endif (UNIX)
