--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -735,7 +735,9 @@ endif (WIN32)
 add_subdirectory(app_suite)
 newtest_nobuild(app_suite app_suite_tests ""
   "-suppress;{DRMEMORY_CTEST_SRC_DIR}/app_suite/default-suppressions.txt" "" OFF "")
-newtest_nobuild(app_suite.pattern app_suite_tests "" "-unaddr_only" "" OFF "")
+newtest_nobuild(app_suite.pattern app_suite_tests ""
+  "-unaddr_only;-suppress;{DRMEMORY_CTEST_SRC_DIR}/app_suite/default-suppressions.txt"
+  "" OFF "")
 
 # framework subdir is added at top level b/c wants DR cflags
 
