--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -405,6 +405,11 @@ newtest(hello hello.c)
 newtest(malloc malloc.c)
 newtest(free free.c)
 newtest(registers registers.c)
+if (WIN32)
+  # DRi#893: asm code is producing safeseh compilation failures w/ VS2012.
+  # I believe I have the proper prologue+epilogue but I still the error, so:
+  append_property_string(TARGET registers LINK_FLAGS "/safeseh:no")
+endif (WIN32)
 newtest(bitfield bitfield.cpp)
 if (WIN32)
   # i#489: building /GL results in a double-xor sequence
