Increase app_suite timeout to 120s to avoid timeout on the bots
SVN-Revision: 1435

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -740,6 +740,8 @@ endif (WIN32)
 add_subdirectory(app_suite)
 newtest_nobuild(app_suite app_suite_tests ""
   "-suppress;{DRMEMORY_CTEST_SRC_DIR}/app_suite/default-suppressions.txt" "" OFF "")
+# Ensure ctest itself doesn't time out app_suite (it can take >60s on the bots):
+set_tests_properties(app_suite PROPERTIES TIMEOUT 120)
 newtest_nobuild(app_suite.pattern app_suite_tests ""
   "-unaddr_only;-suppress;{DRMEMORY_CTEST_SRC_DIR}/app_suite/default-suppressions.txt"
   "" OFF "")
