--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1671,7 +1671,7 @@ set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${toolname_cap_spc} Memory Debugging Tool
 set(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/license.txt")
 set(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README")
 
-set(CPACK_SOURCE_IGNORE_FILES "~$")
+set(CPACK_SOURCE_IGNORE_FILES "~$" "/.svn" "/.git")
 
 set(CPACK_PACKAGE_VERSION "${TOOL_VERSION_NUMBER}")
 string(REGEX REPLACE 
@@ -1720,7 +1720,7 @@ endif (WIN32)
 set(CPACK_PACKAGE_FILE_NAME
   "${toolname_cap}-${CPACK_SYSTEM_NAME}-${CPACK_PACKAGE_VERSION}-${TOOL_BUILD_NUMBER}")
 set(CPACK_SOURCE_PACKAGE_FILE_NAME
-  "${toolname_cap}-${CPACK_SYSTEM_NAME}-${CPACK_PACKAGE_VERSION}-${TOOL_BUILD_NUMBER}-Source")
+  "${toolname_cap}-${CPACK_PACKAGE_VERSION}-${TOOL_BUILD_NUMBER}-Source")
 
 # NSIS settings
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "${toolname_cap_spc}")
