i#1306 Dr. Heapstat -replace_malloc, part 1:
Pass in the client library name via preprocessor define CLIENT_LIBNAME.
Generalize the existing name check in the alloc module load event to
skip the drheapstat library as well as the drmemory library.

Fixes mistakes in setting properties of the wrong lib in dstracelib, which
were blocking the change here.

SVN-Revision: 1481

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -948,7 +948,10 @@ endif (WIN32 AND USE_DRSYMS AND TOOL_DR_MEMORY)
 add_library(${client_target} SHARED ${srcs})
 set_target_properties(${client_target} PROPERTIES
   VERSION ${TOOL_VERSION_NUMBER})
-set_property(TARGET ${client_target} PROPERTY COMPILE_DEFINITIONS ${DEFINES_NO_D})
+set_property(TARGET ${client_target} PROPERTY COMPILE_DEFINITIONS
+  # If we end up wanting this for other DEFINES uses above we'll have to set
+  # client_target earlier.  For now we only need for the C code.
+  "${DEFINES_NO_D};CLIENT_LIBNAME=${client_target}")
 if ("${CMAKE_GENERATOR}" MATCHES "Visual Studio")
   # ensure race-free parallel builds
   add_dependencies(${client_target} ${asm_utils_tgt})
