--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1386,6 +1386,11 @@ install(TARGETS ${client_target}
   PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
   WORLD_READ WORLD_EXECUTE)
 if (WIN32)
+  install(TARGETS symquery DESTINATION "${INSTALL_BIN}"
+    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+    WORLD_READ WORLD_EXECUTE)
+  # XXX i#926: remove winsyms once we remove postleaks.pl.
+  # Also removed its pdb below via: PATTERN "winsyms.pdb" EXCLUDE
   install(TARGETS winsyms DESTINATION "${INSTALL_BIN}"
     PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE)
