--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -818,7 +818,13 @@ if (TOOL_DR_MEMORY)
 endif (TOOL_DR_MEMORY)
 
 add_subdirectory(app_suite)
-newtest_nobuild(app_suite app_suite_tests ""
+if (TOOL_DR_HEAPSTAT)
+  # i#1358: Dr. Heapstat currently can't handle code in the heap
+  set(app_suite_ops "--gtest_filter=-MallocTests.Executable")
+else ()
+  set(app_suite_ops "")
+endif ()
+newtest_nobuild(app_suite app_suite_tests "${app_suite_ops}"
   "-suppress;{DRMEMORY_CTEST_SRC_DIR}/app_suite/default-suppressions.txt"
   # i#1309: turn off some DR debug checking to speed up the test, as it times out
   # on Dr. Heapstat w/ online symbolization.
