disable gdi check by default for -handle_leaks_only and -leaks_only
SVN-Revision: 1617

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -701,7 +701,7 @@ if (TOOL_DR_MEMORY)
       "-light;-check_handle_leaks;-callstack_max_frames;100"
       "" OFF "" OFF)
     newtest_nobuild(handle_only handle ""
-      "-handle_leaks_only;-callstack_max_frames;100" "" OFF "handle")
+      "-handle_leaks_only;-callstack_max_frames;100" "" OFF "handle_only")
     # XXX i#1320: have runtest.cmake check potential_errors.txt too
     newtest_ex(blacklist blacklist.cpp "" "-lib_blacklist_frames;1" "" OFF "" OFF)
   endif (WIN32)
