Add -logdir parameter and logging support to drstrace. The default is still to print to stderr, equivalent to "-logdir -". Relies on drx_open_unique_appid_file() in DR r2405.
SVN-Revision: 1635

--- a/drstrace/CMakeLists.txt
+++ b/drstrace/CMakeLists.txt
@@ -44,6 +44,7 @@ configure_DynamoRIO_client(drstracelib)
 # to test the shared, public version:
 use_DynamoRIO_extension(drstracelib drmf_drsyscall)
 use_DynamoRIO_extension(drstracelib drmgr)
+use_DynamoRIO_extension(drstracelib drx)
 add_dependencies(drstracelib drsyscall)
 
 install(TARGETS drstracelib
